Hero Section Mobile Issues Fixed

--- a/src/components/common/animatedSvgLine/animatedSvgLine.css
+++ b/src/components/common/animatedSvgLine/animatedSvgLine.css
@@ -3,6 +3,10 @@
     width: 100%;
 }
 
+.animated-underline.animated {
+    visibility: visible;
+}
+
 .animated-underline.animated path {
     visibility: visible;
     stroke-dasharray: 1000;
@@ -10,10 +14,9 @@
     animation: draw 2s ease-out forwards;
 }
 
+
 @keyframes draw {
     to {
         stroke-dashoffset: 0;
     }
 }
-
-  
